Fix alignment and dialog margin issue

--- a/src/frontend/app/shared/components/list/list.component.scss
+++ b/src/frontend/app/shared/components/list/list.component.scss
@@ -65,6 +65,10 @@
         }
       }
     }
+    &__right {
+      flex: 1;
+      justify-content: flex-end;
+    }
     &__left {
       flex: 1;
       &--text {
